// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseLines does not parse content with metastring 1`] = `
{
  "code": "aaaaa
nnnnn",
  "highlightLines": [
    0,
  ],
}
`;

exports[`parseLines does not parse content with metastring 2`] = `
{
  "code": "// highlight-next-line
aaaaa
bbbbb",
  "highlightLines": [
    0,
  ],
}
`;

exports[`parseLines does not parse content with metastring 3`] = `
{
  "code": "aaaaa
bbbbb",
  "highlightLines": [
    0,
  ],
}
`;

exports[`parseLines does not parse content with no language 1`] = `
{
  "code": "// highlight-next-line
aaaaa
bbbbb",
  "highlightLines": [],
}
`;

exports[`parseLines removes lines correctly 1`] = `
{
  "code": "aaaaa
bbbbb",
  "highlightLines": [
    0,
  ],
}
`;

exports[`parseLines removes lines correctly 2`] = `
{
  "code": "aaaaa
bbbbb",
  "highlightLines": [
    0,
  ],
}
`;

exports[`parseLines removes lines correctly 3`] = `
{
  "code": "aaaaa
bbbbbbb
bbbbb",
  "highlightLines": [
    0,
    2,
    0,
    1,
  ],
}
`;

exports[`parseLines respects language: html 1`] = `
{
  "code": "aaaa
{/* highlight-next-line */}
bbbbb
dddd",
  "highlightLines": [
    0,
    3,
  ],
}
`;

exports[`parseLines respects language: js 1`] = `
{
  "code": "# highlight-next-line
aaaaa
bbbbb",
  "highlightLines": [],
}
`;

exports[`parseLines respects language: jsx 1`] = `
{
  "code": "aaaa
bbbbb
<!-- highlight-next-line -->
dddd",
  "highlightLines": [
    0,
    1,
  ],
}
`;

exports[`parseLines respects language: md 1`] = `
{
  "code": "---
aaa: boo
---

aaaa

<div>
foo
</div>

bbbbb
dddd

\`\`\`js
// highlight-next-line
console.log(\\"preserved\\");
\`\`\`",
  "highlightLines": [
    1,
    7,
    11,
  ],
}
`;

exports[`parseLines respects language: none 1`] = `
{
  "code": "aaaa
bbbbb
ccccc
dddd",
  "highlightLines": [
    0,
    1,
    2,
    3,
  ],
}
`;

exports[`parseLines respects language: py 1`] = `
{
  "code": "/* highlight-next-line */
aaaaa
bbbbb",
  "highlightLines": [],
}
`;

exports[`parseLines respects language: py 2`] = `
{
  "code": "// highlight-next-line
aaaa
/* highlight-next-line */
bbbbb
ccccc
<!-- highlight-next-line -->
dddd",
  "highlightLines": [
    4,
  ],
}
`;
